--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |XP Version
 |Dependency
 
+|6.0.3
+|7.9.0
+|com.enonic.lib:lib-guillotine:6.0.3
+
 |6.0.2
 |7.9.0
 |com.enonic.lib:lib-guillotine:6.0.2
