--- a/README.adoc
+++ b/README.adoc
@@ -19,9 +19,9 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |XP Version
 |Dependency
 
-|6.1.0-B2
-|7.12.0-B1
-|com.enonic.lib:lib-guillotine:6.1.0-B2
+|6.1.0
+|7.12.1
+|com.enonic.lib:lib-guillotine:6.1.0
 
 |6.0.5
 |7.9.0
